Add core engine and UI components for PulseDS
- Introduced Engine class to manage the engine's state and event emissions.
- Implemented HeartbeatScheduler for periodic tasks related to the engine.
- Created NamedThreadFactory for generating named threads.
- Developed ConsoleSink for logging events to the console.
- Added DsEvent class to encapsulate event data.
- Established EventSink interface for event publishing.
- Designed a cyber-themed CSS for UI styling.
- Implemented AvlInvariantChecker and AvlNode for AVL tree structure validation.
- Created RealTimeAvl for real-time AVL tree operations.
- Developed ControlPanel and EventPanel for user interaction.
- Introduced PulseApp as the main application entry point.
- Added TreeCanvas for visual representation of AVL trees.

--- a/pom.xml
+++ b/pom.xml
@@ -17,4 +17,40 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
+    <dependencies>
+    <dependency>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-controls</artifactId>
+        <version>21</version>
+    </dependency>
+    <dependency>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-graphics</artifactId>
+        <version>21</version>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <!-- Java 17 compiler -->
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <release>17</release>
+                </configuration>
+            </plugin>
+
+            <!-- JavaFX runner -->
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>io.pulseds.ui.PulseApp</mainClass>
+                </configuration>
+            </plugin>
+
+        </plugins>
+    </build>
 </project>
